<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SleekStats: Softball</string>
    <string name="nowbatting">At Bat:</string>
    <string name="_3b">3B</string>
    <string name="bb">BB</string>
    <string name="_2b">2B</string>
    <string name="_1b">1B</string>
    <string name="ops">OPS</string>
    <string name="slg">SLG</string>
    <string name="obp">OBP</string>
    <string name="avg">AVG</string>
    <string name="rbi">RBI</string>
    <string name="r">R</string>
    <string name="hr">HR</string>
    <string name="h">H</string>
    <string name="team">Team</string>
    <string name="name">Name</string>
    <string name="delete_dialog_msg">Are you sure you want to permanently delete %1$s from the league?</string>
    <string name="delete_warning_msg">Deleting will cause all info to be lost forever.</string>
    <string name="remove_warning_msg">You will no longer have any access to this %1$s.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_player_successful"> was successfully deleted.</string>
    <string name="delete_or_freeagency_msg">Delete players permanently or make players free agents?</string>
    <string name="waivers">Waivers</string>
    <string name="add_teams_text">PLEASE ADD TEAMS!</string>
    <string name="add_players_text">PLEASE ADD PLAYERS!</string>
    <string name="edit_player_name">Edit %1$s\'s name:</string>
    <string name="edit_player_team">Edit %1$s\'s team</string>
    <string name="ab">AB</string>
    <string name="g">G</string>
    <string name="undo">Undo</string>
    <string name="end_msg">Finish &amp; Update Stats</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_team">Change Team</string>
    <string name="delete_player">Delete Player</string>
    <string name="delete_team">Delete Team</string>
    <string name="edit_lineup">Edit Lineup</string>
    <string name="redo_play">Redo Play</string>
    <string name="undo_play">Undo Play</string>
    <string name="gamestats">Game Stats</string>
    <string name="stats">Stats</string>
    <string name="bench">Bench</string>
    <string name="remove_all_players">Remove All Players</string>
    <string name="remove_all_free_agents">Remove all free agents from league?</string>
    <string name="send_all_to_waivers">Send %1$s\'s players to waivers?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="out">Out</string>
    <string name="error">Error</string>
    <string name="sf">SF</string>
    <string name="fc">FC</string>
    <string name="exit">Exit</string>
    <string name="finish">Finish Early</string>
    <string name="w">W</string>
    <string name="l">L</string>
    <string name="t">T</string>

    <!-- Strings related to login -->
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="outs">Outs</string>
    <string name="continue_game">Continue Game</string>
    <string name="add_players">Add Players</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="start">Start</string>

    <string name="empty_avg">---</string>
    <string name="user_settings">Users</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="lineup">Lineup</string>
    <string name="submit_lineup">Submit Lineup</string>
    <string name="help_OFF">In-Game Help: OFF</string>
    <string name="help_ON">In-Game Help: ON</string>
    <string name="Innings">Innings: %1$s</string>
    <string name="set_gender_lineup">Lineup Rules:</string>
    <string name="game_settings">Game Settings</string>
    <string name="player">Player</string>
    <string name="league">League</string>
    <string name="teamStatKeeper">Team StatKeeper</string>
    <string name="leagueStatKeeper">League StatKeeper</string>
    <string name="playerStatKeeper">Player StatKeeper</string>
    <string name="view_only">View Only</string>
    <string name="view_manage">View/Manage</string>
    <string name="admin">Admin</string>
    <string name="remove_user">Remove User</string>
    <string name="export_stats">Export Stats</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="submit_play">Submit Play</string>
    <string name="reset_bases">Reset Bases</string>
    <string name="diff">DIFF</string>
    <string name="ra">RA</string>
    <string name="rs">RS</string>
    <string name="winpct">Win%</string>
    <string name="exit_game">Exit Game</string>
    <string name="load_from_cache_desc">If you can\'t wait, you can load from cache, but some stats may be incomplete!</string>
    <string name="load">Load</string>
    <string name="back">Back</string>
    <string name="edit_gender">Edit Gender</string>
    <string name="save_edit">Save Edit</string>
    <string name="create_statkeeper">Welcome to SleekStats-Softball.\n\nKeep stats for a player, team, or entire league!\n\nPlease create a new StatKeeper!</string>
    <string name="creator">Creator</string>
    <string name="create_a_new_statkeeper">Create a new StatKeeper!</string>
    <string name="error_with_loading">Error with loading</string>
    <string name="welcome_to_statkeeper">SleekStats Softball</string>
    <string name="my_statkeepers">My StatKeepers</string>
    <string name="please_enter_name_first">Please enter a name first!</string>
    <string name="add_team_players">Add Team/Players</string>
    <string name="step_2_choose_at_bat_result">Step 2: Choose at bat result</string>
    <string name="step_3_submit_play">Step 3: Submit play</string>
    <string name="step_4_repeat">Step 4: Repeat!</string>
    <string name="step_1_drag_batter_to_a_base">Step 1: Drag batter to empty base</string>
    <string name="select_from_current_teams">Select from current teams</string>
    <string name="create_new_team">Create New Team</string>
    <string name="player_statkeeper_desc">Keep stats for one player</string>
    <string name="league_statkeeper_desc">Keep stats, scores, &amp; standings for a league</string>
    <string name="team_statkeeper_desc">Keep stats &amp; scores for one team</string>
    <string name="blank">----</string>
    <string name="load1_prepare_sync" tools:ignore="TypographyFractions">(1/3)  Preparing Sync</string>
    <string name="load1_desc">Please wait while database is retrieved.</string>
    <string name="load3_deletion_check">(3/3)  Deletion Check</string>
    <string name="load3_desc">Checking if players or teams were deleted on other devices.</string>
    <string name="load2_syncing">(2/3)  Syncing…</string>
    <string name="load2_desc">Updating %1$s statistics.</string>
    <string name="email_users">Email Users</string>
    <string name="created_by">Created By</string>
    <string name="invite_friends">Invite Friends!</string>
    <string name="undo_button" translatable="false">Undo Button</string>
    <string name="redo_button" translatable="false">Redo Button</string>
    <string name="infield">Infield</string>
    <string name="batter">Batter</string>
    <string name="info">info</string>
    <string name="add_run_button" translatable="false">add run button</string>
    <string name="remove_run_button" translatable="false">remove run button</string>
    <string name="add_out_button" translatable="false">add out button</string>
    <string name="remove_out_button" translatable="false">remove out button</string>
    <string name="subtract_result_button" translatable="false">subtract result button</string>
    <string name="add_result_button" translatable="false">add result button</string>
    <string name="top_of_inning" translatable="false">top of inning</string>
    <string name="bottom_of_inning" translatable="false">bottom of inning</string>
    <string name="choose_diff_teams_text" translatable="false">Please choose different teams.</string>
    <string name="sign_in_to_start_text" translatable="false">Welcome to SleekStats-Softball.\n\nKeep stats for a player, team, or entire league!\n\nPLEASE SIGN IN!</string>
    <string name="total">Total</string>
    <string name="wait">Wait</string>
    <string name="sac_bunt">Sac Bunt</string>
    <string name="runs">Runs Scored</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://seekstats.xyz\",\n  }\n}]</string>
    <string name="change_innings_mercy">Set Innings/Mercy</string>
    <string name="accept">Accept</string>
    <string name="scores">Scores</string>
    <string name="open_stat_manager">Open Stat Manager</string>
    <string name="close_stat_manager">Close Stat Manager</string>
    <string name="delete_recap">Delete</string>
    <string name="stat_update_success">Stats have been successfully updated.</string>
    <string name="cloud_fail">Cloud database error! Please make sure you have a working data connection.</string>
    <string name="retry">Retry</string>
    <string name="no_data_connection">No Data Connection</string>
    <string name="connection_warning">You can load from cache, but a data connection is recommended in order to ensure stats are up to date.</string>
    <string name="unable_to_connect">Unable to Connect to Database</string>
    <string name="check_connection_and_retry">Please check your data connection and try again.</string>
    <string name="type_">Type:</string>
    <string name="level_">Level:</string>
    <string name="set_user_access">Set User Access</string>
    <string name="retry_load">Retry Load</string>
    <string name="load_from_cache">Load from Cache</string>
    <string name="item" translatable="false">Item</string>
    <string name="delete_">Delete?</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="email_head_admin">Email Head Admin</string>
    <string name="changes_to_cloud">Changes have been uploaded to cloud!</string>
    <string name="game_deleted">Game has been deleted, and stats have been reverted.</string>
    <string name="add_auto_outs">Add Auto-Outs</string>
    <string name="auto_sort">Auto-Sort</string>
    <string name="preview">Preview</string>
    <!--<string name="next_inning">Next Inning</string>-->
    <string name="mercy_rule">Mercy Rule: %1$s</string>
    <string name="sb">SB</string>
    <string name="game">Game</string>
    <string name="reset_lineup_rules">Reset Lineup Rules</string>
    <string name="stolen_bases_off">K/SB/HBP: Off</string>
    <string name="stolen_bases_on">K/SB/HBP: On</string>
    <string name="edit_team_stats">Edit Team Stats</string>
    <string name="edit_of_games_played">Edit # of Games Played</string>
    <string name="gdpr">GDPR</string>
    <string name="add_extra_out">Add Extra Out</string>
    <string name="k">K</string>
    <string name="edit_score">Edit Score</string>
    <string name="hbp">HBP</string>
    <string name="standings">Standings</string>
    <string name="plays">Plays</string>
    <string name="roe" translatable="false">ROE</string>
    <string name="show_counter" translatable="false">Show Counter</string>

    <!--<string name="hit_single"> hit a single</string>-->
    <!--<string name="hit_double"> hit a double</string>-->
    <!--<string name="hit_triple"> hit a triple</string>-->
    <!--<string name="hit_hr"> hit a home run</string>-->
    <!--<string name="hit_out"> got out</string>-->
    <!--<string name="hit_error"> reached on error</string>-->
    <!--<string name="hit_fc"> hit into a fielder\'s choice</string>-->
    <!--<string name="sac_bunted"> sac bunted</string>-->
    <!--<string name="struck_out"> struck out</string>-->
    <!--<string name="hit_by_pitch"> was hit by pitch</string>-->
</resources>
