<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LeagueGameActivity">

    <item
        android:id="@+id/action_undo_play"
        android:title="@string/undo_play"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_redo_play"
        android:title="@string/redo_play"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_out"
        android:title="@string/add_extra_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_lineup"
        android:title="@string/edit_lineup"
        app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/action_next_inning"-->
        <!--android:title="@string/next_inning"-->
        <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/action_goto_stats"
        android:title="@string/stats"
        app:showAsAction="never" />

    <item
        android:id="@+id/change_game_settings"
        android:title="@string/change_innings_mercy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_score"
        android:title="@string/edit_score"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_SB"
        android:title="@string/stolen_bases_off"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit_game"
        android:title="@string/exit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_finish_game"
        android:title="@string/finish"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_off_lineup_rules"
        android:title="@string/reset_lineup_rules"
        app:showAsAction="never" />
</menu>