<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:paddingTop="8dp"
    android:paddingBottom="12dp"
    android:paddingStart="8dp"
    android:paddingEnd="0dp"
    android:elevation="4dp"
    tools:targetApi="lollipop">

    <TextView
        android:id="@+id/standings_name_title"
        style="@style/StandingsTitleStyle"
        android:layout_width="0dp"
        android:layout_weight="100"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/team"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_goneMarginEnd="8dp"
        app:layout_goneMarginRight="8dp"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/win_title"
        style="@style/StandingsTitleStyle"
        android:text="@string/w" />

    <TextView
        android:id="@+id/loss_title"
        style="@style/StandingsTitleStyle"
        android:text="@string/l" />

    <TextView
        android:id="@+id/tie_title"
        style="@style/StandingsTitleStyle"
        android:text="@string/t" />

    <TextView
        android:id="@+id/winpct_title"
        style="@style/StandingsTitleStyle"
        android:layout_weight="50"
        android:text="@string/winpct"/>

    <TextView
        android:id="@+id/runsfor_title"
        style="@style/StandingsTitleStyle"
        android:layout_weight="36"
        android:text="@string/rs" />

    <TextView
        android:id="@+id/runsagainst_title"
        style="@style/StandingsTitleStyle"
        android:layout_weight="40"
        android:text="@string/ra" />

    <TextView
        android:id="@+id/rundiff_title"
        style="@style/StandingsTitleStyle"
        android:layout_weight="36"
        android:text="@string/diff"
        android:textSize="14sp"/>

</LinearLayout>