<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#7fdfff"
    >

    <TextView
        android:id="@+id/name_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingEnd="20dp"
        android:paddingLeft="8dp"
        android:paddingRight="20dp"
        android:paddingStart="8dp"
        android:text="@string/name"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/game_title"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/g"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ab_title"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/ab"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hit_title"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/h"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hr_title"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/hr"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/run_title"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/r"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rbi_title"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/rbi"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/avg_title"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/avg"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/obp_title"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/obp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slg_title"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/slg"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ops_title"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/ops"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sgl_title"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/_1b"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dbl_title"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/_2b"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tpl_title"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/_3b"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bb_title"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="4dp"
        android:text="@string/bb"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>