<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="100dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp">

        <!--<TextView-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center_vertical"-->
            <!--android:text="ISOTOPES LEAGUE"-->
            <!--android:textSize="24sp"-->
            <!--android:textStyle="bold"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--/>-->

        <Spinner
            android:id="@+id/spinner_stats_teams"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.android.scorekeepdraft1.activities.StatsActivity">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_title"
                    style="@style/StatsTitleStyle"
                    android:layout_width="100dp"
                    android:gravity="start"
                    android:paddingTop="0dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="20dp"
                    android:paddingStart="8dp"
                    android:text="@string/name"
                    android:textAlignment="textStart"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/team_abv_title"
                    style="@style/StatsTitleStyle"
                    android:layout_width="60dp"
                    android:paddingRight="10dp"
                    android:text="@string/team" />

                <TextView
                    android:id="@+id/game_title"
                    style="@style/StatsTitleStyle"
                    android:text="@string/g"/>

                <TextView
                    android:id="@+id/ab_title"
                    style="@style/StatsTitleStyle"
                    android:text="@string/ab" />

                <TextView
                    android:id="@+id/hit_title"
                    style="@style/StatsTitleStyle"
                    android:text="@string/h" />

                <TextView
                    android:id="@+id/hr_title"
                    style="@style/StatsTitleStyle"
                    android:text="@string/hr" />

                <TextView
                    android:id="@+id/run_title"
                    style="@style/StatsTitleStyle"
                    android:text="@string/r" />

                <TextView
                    android:id="@+id/rbi_title"
                    style="@style/StatsTitleStyle"
                    android:text="@string/rbi" />

                <TextView
                    android:id="@+id/avg_title"
                    android:layout_width="70dp"
                    style="@style/StatsTitleStyle"
                    android:text="@string/avg" />

                <TextView
                    android:id="@+id/obp_title"
                    android:layout_width="70dp"
                    style="@style/StatsTitleStyle"
                    android:text="@string/obp" />

                <TextView
                    android:id="@+id/slg_title"
                    android:layout_width="70dp"
                    style="@style/StatsTitleStyle"
                    android:text="@string/slg" />

                <TextView
                    android:id="@+id/ops_title"
                    android:layout_width="70dp"
                    style="@style/StatsTitleStyle"
                    android:text="@string/ops" />

                <TextView
                    android:id="@+id/sgl_title"
                    style="@style/StatsTitleStyle"
                    android:text="@string/_1b"/>

                <TextView
                    android:id="@+id/dbl_title"
                    style="@style/StatsTitleStyle"
                    android:text="@string/_2b"/>

                <TextView
                    android:id="@+id/tpl_title"
                    android:layout_width="50dp"
                    style="@style/StatsTitleStyle"
                    android:text="@string/_3b" />

                <TextView
                    android:id="@+id/bb_title"
                    style="@style/StatsTitleStyle"
                    android:text="@string/bb" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/empty_stats_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="48dp"
                android:textSize="36sp"
                android:visibility="gone"
                android:text="@string/empty_view_player_text" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
