<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change_name"
        android:title="@string/edit_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_photo"
        android:title="@string/edit_photo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_team"
        android:title="@string/edit_team"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_player"
        android:title="@string/delete_player"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_stats"
        android:title="@string/export_stats"
        android:visible="false"
        app:showAsAction="never" />

</menu>