<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TeamActivity">

    <item
        android:id="@+id/action_change_name"
        android:title="@string/edit_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_photo"
        android:title="@string/edit_photo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_team"
        android:title="@string/edit_lineup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_players"
        android:title="Remove Players"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_team"
        android:title="@string/delete_team"
        app:showAsAction="never" />
</menu>